--- a/create task/style.css
+++ b/create task/style.css
@@ -2,19 +2,33 @@
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
-
-  color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
   background-color: #ddffc7;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
 }
 
 button {
   font-family: inherit;
+  padding: 1%;
+  border-radius: 6px;
+  border-color: #81a4671e;
+  background-color:rgb(251, 251, 251);
+  margin-left: 10px;
+  margin-right: 10px;
+}
+
+#buttons {
+  margin-top: 5%;
+  text-align: center;
+}
+
+img {
+  margin-top: 5%;
+  width: 50vw; 
   display: block;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 6px 10px 14px #81a467;
+  background-color: #ffffffc4;
 }
